# moveit_ros

manipulation/: CMakeLists.txt  package.xml
manipulation/move_group_pick_place_capability/: CMakeLists.txt
move_group/: CMakeLists.txt  default_capabilities_plugin_description.xml
move_group/include/moveit/move_group/: capability_names.h
move_group/src/default_capabilities/: get_execution_state_service_capability.cpp  get_execution_state_service_capability.h
moveit_ros/: CHANGELOG.rst
perception/: CHANGELOG.rst  CMakeLists.txt  package.xml  roblog_pointcloud_octomap_updater_plugin_description.xml
perception/depth_image_octomap_updater/: CMakeLists.txt
perception/roblog_pointcloud_octomap_updater/: CMakeLists.txt
perception/roblog_pointcloud_octomap_updater/include/moveit/roblog_pointcloud_octomap_updater/: roblog_pointcloud_octomap_updater.h
perception/roblog_pointcloud_octomap_updater/src/: plugin_init.cpp  roblog_pointcloud_octomap_updater.cpp
perception/srv/: IsAppliedUpdateOctomap.srv  MaskCollisionObjects.srv  UpdateCollisionObjects.srv  UpdateOctomap.srv
planning/: CHANGELOG.rst
planning/planning_scene_monitor/src/: planning_scene_monitor.cpp
planning/trajectory_execution_manager/include/moveit/trajectory_execution_manager/: trajectory_execution_manager.h
planning_interface/: CHANGELOG.rst
planning_interface/move_group_interface/src/: move_group.cpp
robot_interaction/: CHANGELOG.rst
visualization/: CHANGELOG.rst  CMakeLists.txt  package.xml
visualization/motion_planning_rviz_plugin/src/ui/: motion_planning_rviz_plugin_frame.ui
